Added Eclipse support

--- a/README.textile
+++ b/README.textile
@@ -1,7 +1,7 @@
 Incubator and experimental stuff for the "eHealth Integration Framework":http://github.com/krasserm/ipf (IPF). Currently contained are:
 
 * A CouchDB-based message store and flow management service ("details":http://repo.openehealth.org/confluence/display/ipflab/Message+Storage+in+a+NoSQL+Database).  
-* A Maven plugin for generating GDSL descriptors for IntelliJ IDEA.
+* A Maven plugin for generating DSL descriptors for both IntelliJ IDEA and Eclipse, as well as DSL HTML report site.
 
 h2. History
 
